Small fixes in layouts. added tabs page

--- a/pages/buttons.html
+++ b/pages/buttons.html
@@ -12,7 +12,7 @@ permalink: /buttons
       <div class="field__label">Theme</div>
       <div class="field__data">
         <div class="field__value">
-          <div class="selector selector--singleselect selector--expanded JS_selector ">
+          <div class="selector selector--singleselect selector--expanded selector--required JS_selector ">
             <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
               <div class="selector__block">
                 <div class="selector__blockPart selector__blockPart--field JS_theme_light">Light</div>
