--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -13,7 +13,7 @@ permalink: /selectors
       <div class="field__label">Theme</div>
       <div class="field__data">
         <div class="field__value">
-          <div class="selector selector--singleselect selector--expanded JS_selector ">
+          <div class="selector selector--singleselect selector--expanded selector--required JS_selector ">
             <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem" tabindex='0'>
               <div class="selector__block">
                 <div class="selector__blockPart selector__blockPart--field JS_theme_light">Light</div>
