--- a/pages/comments.html
+++ b/pages/comments.html
@@ -270,13 +270,13 @@ permalink: /comments
 
 
   $('body').on('focusin', '.comment-field__input textarea', function() {
-    $('.overlay-body').addClass('overlay-body--visible overlay-body--text');
+    openOverlay(true, false, false);
     $(this).closest('.comment-field').addClass('comment-field--focus');
     $(this).closest('.comment-field').find('.comment-field__send').addClass('opacity-100');
   });
 
   $('body').on('focusout', '.comment-field__input textarea', function() {
-    $('.overlay-body').removeClass('overlay-body--visible overlay-body--text');
+    closeOverlay();
     $(this).closest('.comment-field').removeClass('comment-field--focus');
     checkContentInput();
     checkFakeInputHeight();
