Added overlay explanation

--- a/pages/inputs.html
+++ b/pages/inputs.html
@@ -86,7 +86,8 @@ permalink: /inputs
         </div>
       </div>
       <div class="note">
-        <p>If the input field is focused or filled, the label is above the input field. When the input field becomes empty again, the label moves down.</p>
+        <li>If the input field is focused or filled, the label is above the input field. When the input field becomes empty again, the label moves down.</li>
+        <li>The overlay is lighter, and click through (overlay-body--visible AND overlay-body--text)</li>
       </div>
     </div>
 
