--- a/pages/popups.html
+++ b/pages/popups.html
@@ -4,17 +4,18 @@ title: Popups
 permalink: /popups
 ---
 
-<div class="relative h-32"></div>
-
 <div class="flex flex-col sm:flex-row m-8 py-4 min-h-screen border-b-2 border-dashed border-grey-dark overflow-hidden">
   <div class="sm:w-1/3 p-4 overflow-hidden">
+    <h2 class="mb-8">Popup explanation</h2>
     <div class="note">
+      <h4 class="py-2">Position</h4>
       <li>The position of the popup is usually the bottom left of the trigger touches the top left of the popup.</li>
       <li>If this way the popup would be too wide to fit fully on the screen, then it is aligned to the right: bottom right of the trigger touches the top right of the popup.</li>
       <li>The width of the popup is always the same size as the trigger, but has a min-width 300px. So if the trigger is 50% of your screen, the popup will be 50% wide too.</li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <h4 class="py-2">Overlay</h4>
+      <li>For normal popups the overlay is darker, pointer-events-none (overlay-body--visible)</li>
+      <li>For error dialog the overlay is red (overlay-body--visible AND overlay-body--error)</li>
+      <li>For tooltip the overlay is blue (overlay-body--visible AND overlay-body--tooltip)</li>
     </div>
   </div>
   <div class="sm:w-1/3 p-4 overflow-hidden">
@@ -109,7 +110,9 @@ permalink: /popups
 
     <!-- Field -->
     <div class="field field--not-empty">
-      <div class="field__label">Columnpicker</div>
+      <div class="field__label">Columnpicker with tooltip example (note in popup), click icon
+        <div class="inline-action primary animate-fly-in-left JS_has-popup JS_has-popup--tooltip" data-popid="#ms-privacy"></div>
+      </div>
       <div class="field__data">
         <div class="field__value">
           <button class="block-action JS_has-popup" data-popid="#multiSelector-columnpicker"></button>
@@ -123,6 +126,26 @@ permalink: /popups
         <li>A normal description follows the same structure.</li>
       </div>
     </div>
+
+    <!-- Popup -->
+    <div class="multiSelector" id="ms-privacy">
+      <div class="itemBox">
+        <div class="itemBox__row">
+          <ul class="itemBox__rowInner itemBox__rowInner--custom">
+            <li class="itemBox__cell">
+              <div class="itemBox__cellInner">
+
+                <div class="note note--tooltip">
+                  <p>By selecting 'Agree' you have read and accepted TenForce's <a href="#" class="link link--primary">Privacy Policy</a>, concerning your personal data and how it is used.</p>
+                </div>
+
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
     <!-- Popup -->
     {% include popups/multiSelector-columnpicker.html %}
   </div>
