--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -243,7 +243,7 @@ permalink: /selectors
     <!-- Field -->
     <div class="field field--not-empty">
       <div class="field__label">Privacy Policy - tooltip example (note in popup), click icon
-        <div class="inline-action primary animate-fly-in-left JS_has-popup" data-popid="#ms-privacy"></div>
+        <div class="inline-action primary animate-fly-in-left JS_has-popup JS_has-popup--tooltip" data-popid="#ms-privacy"></div>
       </div>
       <div class="field__data">
 
