Explanation about field--not-empty

--- a/pages/inputs.html
+++ b/pages/inputs.html
@@ -73,7 +73,8 @@ permalink: /inputs
         </div>
       </div>
       <div class="note">
-        <p>Example note under empty field. The label is moved into the input field's position and acts as placeholder.</p>
+        <li>Example note under empty field. The label is moved into the input field's position and acts as placeholder.</li>
+        <li>If a field (block around the input) is not empty, you can use the field--not-empty class to make the label stay on top, used in all other pages.</li>
       </div>
     </div>
 
