Overlay is a component now

--- a/pages/popups.html
+++ b/pages/popups.html
@@ -13,6 +13,7 @@ permalink: /popups
       <li>If this way the popup would be too wide to fit fully on the screen, then it is aligned to the right: bottom right of the trigger touches the top right of the popup.</li>
       <li>The width of the popup is always the same size as the trigger, but has a min-width 300px. So if the trigger is 50% of your screen, the popup will be 50% wide too.</li>
       <h4 class="py-2">Overlay</h4>
+      <li>First child of the body</li>
       <li>For normal popups the overlay is darker, pointer-events-none (overlay-body--visible)</li>
       <li>For error dialog the overlay is red (overlay-body--visible AND overlay-body--error)</li>
       <li>For tooltip the overlay is blue (overlay-body--visible AND overlay-body--tooltip)</li>
