--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -418,6 +418,8 @@ permalink: /selectors
       </div>
     </div>
 
+    <!-- Popup -->
+    {% include popups/multiSelector-tags-colors.html %}
   </div>
 </div>
 
@@ -454,90 +456,95 @@ permalink: /selectors
       </div>
     </div>
 
-    <!-- Field -->
-    <div class="field field--not-empty">
-      <div class="field__label">Tags  Filter</div>
-      <div class="field__data">
-        <div class="field__value">
-          <div class="selector selector--expanded JS_has-popup" data-popid="#filter-tagpicker">
-            <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Include</div>
-            <div class="selector__item JS_selectorItem--active selector__item--selected">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;"></div>
-                <div class="selector__blockPart selector__blockPart--field">Design</div>
+      <!-- Field -->
+      <div class="field field--not-empty">
+        <div class="field__label">Tags  Filter with popup</div>
+        <div class="field__data">
+          <div class="field__value JS_has-popup" data-popid="#filter-tagpicker">
+            <div class="selector selector--expanded selector--readonly">
+              <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Include</div>
+              <div class="selector__item JS_selectorItem--active selector__item--selected">
+                <div class="selector__block">
+                  <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #00BFFF;"></div>
+                  <div class="selector__blockPart selector__blockPart--field">Design</div>
+                </div>
+              </div>
+              <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">And</div>
+              <div class="selector__item JS_selectorItem--active selector__item--selected">
+                <div class="selector__block">
+                  <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
+                  <div class="selector__blockPart selector__blockPart--field">Marketing</div>
+                </div>
               </div>
             </div>
-            <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">And</div>
-            <div class="selector__item JS_selectorItem--active selector__item--selected">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0BDA51;"></div>
-                <div class="selector__blockPart selector__blockPart--field">Marketing</div>
-              </div>
+            <div class="selector selector--expanded selector--readonly JS_selector">
+              <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Or</div>
             </div>
-          </div>
-          <div class="selector selector--expanded JS_selector">
-            <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Or</div>
-          </div>
-          <div class="selector selector--expanded JS_selector">
-            <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Exclude</div>
-            <div class="selector__item JS_selectorItem--active selector__item--selected">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #f4ca16;"></div>
-                <div class="selector__blockPart selector__blockPart--field">front-end</div>
+            <div class="selector selector--expanded selector--readonly JS_selector">
+              <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Exclude</div>
+              <div class="selector__item JS_selectorItem--active selector__item--selected">
+                <div class="selector__block">
+                  <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #f4ca16;"></div>
+                  <div class="selector__blockPart selector__blockPart--field">front-end</div>
+                </div>
               </div>
-            </div>
-            <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Or</div>
-            <div class="selector__item JS_selectorItem--active selector__item--selected">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #e30022;"></div>
-                <div class="selector__blockPart selector__blockPart--field">back-end</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Field -->
-    <div class="field field--not-empty">
-      <div class="field__label">Date  Filter</div>
-      <div class="field__data">
-        <div class="field__value">
-          <div class="selector selector--expanded JS_has-popup" data-popid="#filter-datepicker">
-            <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Include</div>
-            <div class="selector__item JS_selectorItem--active selector__item--selected">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--field">next 2 weeks (12/03/18-25/03/18)</div>
-              </div>
-            </div>
-            <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">And</div>
-            <div class="selector__item JS_selectorItem--active selector__item--selected">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--field">19/03/18-20/03/18</div>
-              </div>
-            </div>
-          </div>
-          <div class="selector selector--expanded">
-            <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Or</div>
-          </div>
-          <div class="selector selector--expanded">
-            <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Exclude</div>
-            <div class="selector__item JS_selectorItem--active selector__item--selected">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--field">today</div>
-              </div>
-            </div>
-            <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Or</div>
-            <div class="selector__item JS_selectorItem--active selector__item--selected">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--field">18/03/18</div>
+              <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Or</div>
+              <div class="selector__item JS_selectorItem--active selector__item--selected">
+                <div class="selector__block">
+                  <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #e30022;"></div>
+                  <div class="selector__blockPart selector__blockPart--field">back-end</div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
 
+      <!-- Popup -->
+      {% include popups/filter-tags.html%}
+
+      <!-- Field -->
+      <div class="field field--not-empty">
+        <div class="field__label">Date  Filte with popupr</div>
+        <div class="field__data">
+          <div class="field__value JS_has-popup" data-popid="#filter-datepicker">
+            <div class="selector selector--expanded selector--readonly">
+              <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Include</div>
+              <div class="selector__item JS_selectorItem--active selector__item--selected">
+                <div class="selector__block">
+                  <div class="selector__blockPart selector__blockPart--field">next 2 weeks (12/03/18-25/03/18)</div>
+                </div>
+              </div>
+              <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">And</div>
+              <div class="selector__item JS_selectorItem--active selector__item--selected">
+                <div class="selector__block">
+                  <div class="selector__blockPart selector__blockPart--field">19/03/18-20/03/18</div>
+                </div>
+              </div>
+            </div>
+            <div class="selector selector--expanded selector--readonly">
+              <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Or</div>
+            </div>
+            <div class="selector selector--expanded selector--readonly">
+              <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Exclude</div>
+              <div class="selector__item JS_selectorItem--active selector__item--selected">
+                <div class="selector__block">
+                  <div class="selector__blockPart selector__blockPart--field">today</div>
+                </div>
+              </div>
+              <div class="selector__itemSeperator selector__itemSeperator--hasLabel h6">Or</div>
+              <div class="selector__item JS_selectorItem--active selector__item--selected">
+                <div class="selector__block">
+                  <div class="selector__blockPart selector__blockPart--field">18/03/18</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Popup -->
+      {% include popups/filter-date.html%}
   </div>
 </div>
 <script>
