--- a/pages/comments.html
+++ b/pages/comments.html
@@ -27,8 +27,8 @@ permalink: /comments
       </div>
       <div class="comment-field__input">
         <a href="#" class="comment-field__attachment">
-          <div class="comment-field__attachment-thumbnail" style="background-image:url('./assets/images/screenshot.png');"></div>
-          <div class="comment-field__attachment-label h2 hidden">jpg</div>
+          <div class="comment-field__attachment-thumbnail"></div>
+          <div class="comment-field__attachment-label h8">document.txt<sup>65kb</sup></div>
         </a>
         <textarea placeholder="Use @ to notify person">Please read acceptence criterias,</textarea>
         <div class="fake-input">Please read acceptence criterias,</div>
