Selectors: typo fix, removed weird checkbox example

--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -249,7 +249,7 @@ permalink: /selectors
 
         <div class="field__value">
           {% include components/selector.html selectorData=",,,Disagree;,,,Agree" expanded="true" singleselect="true" selectedIndexes="1" %}
-          <span>with our <a href="#" class="link link--primary">Privacy Policiy</a>.</span>
+          <span>with our <a href="#" class="link link--primary">Privacy Policy</a>.</span>
         </div>
 
       </div>
@@ -374,16 +374,6 @@ permalink: /selectors
       <div class="field__data">
         <div class="field__value">
           {% include components/selector.html selectorData="#0BDA51,,,;,,," expanded="true" singleselect="true" selectedIndexes="1" %}
-        </div>
-      </div>
-    </div>
-
-    <!-- Field -->
-    <div class="field field--not-empty">
-      <div class="field__label">Checkbox (filter in header)</div>
-      <div class="field__data">
-        <div class="field__value">
-          {% include components/selector.html selectorData=",,,;,,," expanded="true" multiselect="true" selectedIndexes="1" %}
         </div>
       </div>
     </div>
